--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTestSuite.html
@@ -5,6 +5,9 @@
    <title>MediaPlayerWidget Test Suite</title>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+   <meta http-equiv='cache-control' content='no-cache'>
+   <meta http-equiv='expires' content='0'>
+   <meta http-equiv='pragma' content='no-cache'>
 	
    <!-- JavaScript Unit -->
    <link rel="stylesheet" type="text/css" href="../../JsUnit/css/jsUnitStyle.css">
@@ -20,6 +23,7 @@
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerControllerTest.html" );
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerDisplayTest.html" );
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerScreenTest.html" );
+         newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerThumbnailTest.html" );
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerThumbnailsBarTest.html" );
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerTitleBarTest.html" );
          newsuite.addTestPage( "../ObjectTests/MediaPlayerWidget/MediaPlayerWidgetTest.html" );
